configurações, build e deploy

--- a/requests-http/.browserslistrc
+++ b/requests-http/.browserslistrc
@@ -11,6 +11,8 @@
 last 1 Chrome version
 last 1 Firefox version
 last 2 Edge major versions
-last 2 Safari major versions
+# last 2 Safari major versions
+# o Safari está dando um erro no build: HookWebpackError: Transform failed with 1 error:
+# error: Invalid version
 last 2 iOS major versions
 Firefox ESR
